force-app/main/default/objects/NPN_Onboarding_Competency_Level_Mapping__c/NPN_Onboarding_Competency_Level_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NPN Onboarding Competency Level Mapping</label>
</CustomObject>