force-app/main/default/objects/NPN_Onboarding_Competency_Level_Mapping__c/fields/CSP_sell_to_other_CSPs__c.field-meta.xml
<CustomField>
    <fullName>CSP_sell_to_other_CSPs__c</fullName>
    <label>CSP sell to other CSPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>