force-app/main/default/objects/NPN_Onboarding_Competency_Level_Mapping__c/fields/Docusign_Program_Guide_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Program_Guide_Template_Id__c</fullName>
    <label>Docusign_Program_Guide_Template_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>